<resources>
    <string name="app_name">water_drank</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="water_amount_button1">30ml</string>
    <string name="water_amount_button2">200ml</string>
    <string name="water_amount_button3">500ml</string>
    <string name="setting">설정</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="title_text">매일 물마시기!</string>
    <string name="water_amount">0 mL</string>
    <string name="calender_title">2020년 07월</string>
    <string name="day_default">1</string>
    <string name="file_name">water_save</string>
    <string name="pref_name">water_pref</string>
    <string name="water1">water1</string>
    <string name="water2">water2</string>
    <string name="water3">water3</string>
    <string name="waters">waters</string>
    <string name="total_water">total_waters</string>
    <string name="cur_depth">cur_depth</string>
    <string name="reset">리셋</string>
    <string name="increase">1.1배</string>
</resources>
