<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aqua"
        tools:context=".MainActivity">


    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="650dp" app:srcCompat="@color/aqua" android:id="@+id/imageView2"
            android:padding="0dp"
            android:contentDescription="@string/StringValue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:id="@+id/water_drop"
            android:padding="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/water_drop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/StringValue" android:backgroundTint="#00FFFFFF"
            android:visibility="visible"
    />
    <Button
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:id="@+id/water_amount_button1"
            android:text="@string/water_amount_button1"
            app:layout_constraintEnd_toStartOf="@id/water_amount_button2"
            app:layout_constraintTop_toBottomOf="@id/water_drop"
/>
    <Button
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:id="@+id/water_amount_button2"
            android:text="@string/water_amount_button2"
            app:layout_constraintTop_toBottomOf="@id/water_drop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:id="@+id/water_amount_button3"
            android:text="@string/water_amount_button3"
            app:layout_constraintTop_toBottomOf="@id/water_drop"
            app:layout_constraintStart_toEndOf="@id/water_amount_button2"
    />
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/setting"
            android:padding="0dp"
            android:src="@drawable/settings"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop = "5dp"
            android:layout_marginEnd = "5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/StringValue"/>
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/calender"
            android:padding="0dp"
            android:src="@drawable/calender"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop = "5dp"
            android:layout_marginEnd = "5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/setting"
            android:contentDescription="@string/StringValue"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/title_text"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:layout_toStartOf="@id/calender"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_marginTop = "15dp"
            android:layout_marginStart = "5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/title_text"/>
</android.support.constraint.ConstraintLayout>